changed to linkedlist